--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ distributions.main.contents {
     into('samples') {
         from 'samples'
     }
+    into('graphs') {
+        from 'graphs'
+    }
     into('license') {
         from 'resources/license/APACHE-2.0.txt'
         from 'resources/license/LICENSE.txt'
